upate README.md

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     driverClassName: com.sap.db.jdbc.Driver
     url: jdbc:sap://7d81a93f-b9f1-4ddd-8a3e-1e69d412ca35.hana.trial-us10.hanacloud.ondemand.com:443
     username: DBADMIN
-    password: Signin1!
+    password: password
   jpa:
     show-sql: true
     generate-ddl: true
